# p1

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  GOAL.md  README.md  diagonal.lot  example.lot  four_story_garage.lot  outImg  outshit_level0.ppm  outshit_level1.ppm  parking_level0.ppm  parking_level1.ppm  parkinglot.lot  run  test.lot  test.txt
.github/workflows/: clang-tidy-review.yml  cmake-single-platform.yml
lib/: CMakeLists.txt  PlateDB.c  PlateDB.h  calculations.c  calculations.h  data.c  data.h  display.c  display.h  image.c  image.h  lot.c  lot.h  lotReader.c  lotReader.h  nav.c  nav.h  overview.c  overview.h  validate.c  validate.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  PlateDB.c  README.md  data.c  display.c  lot.c  lotReader.c  nav.c  test.c  test.lot  test.txt  validate.c
